// setting the protobuf version to be used
syntax = "proto3";

// importing some standard data types from google
import "google/protobuf/timestamp.proto";

// setting some java specific options
option java_multiple_files = true;
option java_package = "joanna.CA1.Smarthealth";
option java_outer_classname = "PermissionServiceImplBase";

package Smarthealth;

////////////////////////////////////////////////////////////////////////////////////
// The permission service definition. Defining it's remote methods
service PermissionService {
	rpc GiveDataAccess (AccessInfo) returns (RequestResult) {}
	rpc RemoveDataAcess (AccessInfo) returns (RequestResult) {}
	rpc GetAccessHistory (RequestLogHistoryInfo) returns (stream AccessLogEntry) {}
}

////////////////////////////////////////////////////////////////////////////////////
// define the data structures
message RequestResult {
	bool success = 1;
	// if 'success' is false, then this field may contain additional information
	string nonSuccessHint = 2;
}

// paramters needed to do an access change operation
message AccessInfo {
	string doctorID = 1;
	string patientID = 2;
}

// parameters needed to retriebe the access history of a patient
message RequestLogHistoryInfo {
	string doctorID = 1;
	string patientID = 2;
}

// access history log item
message AccessLogEntry {
	google.protobuf.Timestamp date = 1;
	string accessType = 2;
	string operationType = 3;
}
